--- a/templates/doctor-single.html
+++ b/templates/doctor-single.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Doctor | Karunya Eyecare{% endblock %}
+{% block title %}Doctor | Karunya Eye Care{% endblock %}
 
 {% block content %}
 <section class="page-title bg-1">
@@ -10,19 +10,12 @@
       <div class="col-md-12">
         <div class="block text-center">
           <span class="text-white">Doctor Details</span>
-          <h1 class="text-capitalize mb-5 text-lg">Alexandar james</h1>
-
-          <!-- <ul class="list-inline breadcumb-nav">
-            <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
-            <li class="list-inline-item"><span class="text-white">/</span></li>
-            <li class="list-inline-item"><a href="#" class="text-white-50">Doctor Details</a></li>
-          </ul> -->
+          <h1 class="text-capitalize mb-5 text-lg">Dr. Alexander James</h1>
         </div>
       </div>
     </div>
   </div>
 </section>
-
 
 <section class="section doctor-single">
 	<div class="container">
@@ -32,8 +25,8 @@
 					<img src="images/team/1.jpg" alt="" class="img-fluid w-100">
 
 					<div class="info-block mt-4">
-						<h4 class="mb-0">Alexandar james</h4>
-						<p>Orthopedic Surgary</p>
+						<h4 class="mb-0">Dr. Alexander James</h4>
+						<p>Retina Specialist</p>
 
 						<ul class="list-inline mt-4 doctor-social-links">
 							<li class="list-inline-item"><a href="#"><i class="icofont-facebook"></i></a></li>
@@ -48,12 +41,12 @@
 
 			<div class="col-lg-8 col-md-6">
 				<div class="doctor-details mt-4 mt-lg-0">
-					<h2 class="text-md">Introducing to myself</h2>
+					<h2 class="text-md">About the Specialist</h2>
 					<div class="divider my-4"></div>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam tempore cumque voluptate beatae quis inventore sapiente nemo, a eligendi nostrum expedita veritatis neque incidunt ipsa doloribus provident ex, at ullam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, perferendis officiis esse quae, nobis eius explicabo quidem? Officia accusamus repudiandae ea esse non reiciendis accusantium voluptates, facilis enim, corrupti eligendi?</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo recusandae veritatis minus optio quod obcaecati laborum temporibus, deleniti vero perferendis molestias, ducimus facilis, sunt minima. Tempora, amet quasi asperiores voluptas?</p>
+					<p>Dr. Alexander James is a highly skilled retina specialist with years of experience in diagnosing and treating complex retinal diseases, including macular degeneration, diabetic retinopathy, and retinal detachments.</p>
+					<p>He uses the latest advancements in eye care, including laser treatments, intravitreal injections, and surgical interventions, ensuring the best possible outcomes for his patients.</p>
 
-					<a href="appoinment.html" class="btn btn-main-2 btn-round-full mt-3">Make an Appoinment<i class="icofont-simple-right ml-2  "></i></a>
+					<a href="appointment.html" class="btn btn-main-2 btn-round-full mt-3">Make an Appointment<i class="icofont-simple-right ml-2  "></i></a>
 				</div>
 			</div>
 		</div>
@@ -65,7 +58,7 @@
 		<div class="row">
 			<div class="col-lg-6">
 				<div class="section-title">
-					<h3>My Educational Qualifications</h3>
+					<h3>Educational Qualifications</h3>
 					<div class="divider my-4"></div>
 				</div>
 			</div>
@@ -74,78 +67,65 @@
 		<div class="row">
 			<div class="col-lg-6">
 				<div class="edu-block mb-5">
-					<span class="h6 text-muted">Year(2005-2007) </span>
-					<h4 class="mb-3 title-color">MBBS, M.D at University of Wyoming</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi doloremque harum, mollitia, soluta maxime porro veritatis fuga autem impedit corrupti aperiam sint, architecto, error nesciunt temporibus! Vel quod, dolor aliquam!</p>
+					<span class="h6 text-muted">Year (2005-2007)</span>
+					<h4 class="mb-3 title-color">MBBS, M.D at Harvard Medical School</h4>
+					<p>Specialized in ophthalmology with a focus on retinal disorders and advanced laser treatments.</p>
 				</div>
 
 				<div class="edu-block">
-					<span class="h6 text-muted">Year(2007-2009) </span>
-					<h4 class="mb-3 title-color">M.D. of Netherland Medical College</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi doloremque harum, mollitia, soluta maxime porro veritatis fuga autem impedit corrupti aperiam sint, architecto, error nesciunt temporibus! Vel quod, dolor aliquam!</p>
+					<span class="h6 text-muted">Year (2007-2009)</span>
+					<h4 class="mb-3 title-color">Fellowship in Retina Surgery, Johns Hopkins</h4>
+					<p>Extensive hands-on experience in retinal surgeries, including vitrectomy and macular hole repair.</p>
 				</div>
 			</div>
 
 			<div class="col-lg-6">
 				<div class="edu-block mb-5">
-					<span class="h6 text-muted">Year(2009-2010) </span>
-					<h4 class="mb-3 title-color">MBBS, M.D at University of Japan</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi doloremque harum, mollitia, soluta maxime porro veritatis fuga autem impedit corrupti aperiam sint, architecto, error nesciunt temporibus! Vel quod, dolor aliquam!</p>
+					<span class="h6 text-muted">Year (2009-2010)</span>
+					<h4 class="mb-3 title-color">Advanced Training in Retinal Imaging, Moorfields Eye Hospital</h4>
+					<p>Expertise in OCT scans, angiography, and AI-based diagnostics for retinal diseases.</p>
 				</div>
 
 				<div class="edu-block">
-					<span class="h6 text-muted">Year(2010-2011) </span>
-					<h4 class="mb-3 title-color">M.D. of Canada Medical College</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi doloremque harum, mollitia, soluta maxime porro veritatis fuga autem impedit corrupti aperiam sint, architecto, error nesciunt temporibus! Vel quod, dolor aliquam!</p>
+					<span class="h6 text-muted">Year (2010-2011)</span>
+					<h4 class="mb-3 title-color">M.D. in Ophthalmology, Stanford University</h4>
+					<p>Completed research in innovative treatments for diabetic retinopathy and age-related macular degeneration.</p>
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
 
-
 <section class="section doctor-skills">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-4">
-				<h3>My skills</h3>
+				<h3>Expertise</h3>
 				<div class="divider my-4"></div>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In architecto voluptatem alias, aspernatur voluptatibus corporis quisquam? Consequuntur, ad, doloribus, doloremque voluptatem at consectetur natus eum ipsam dolorum iste laudantium tenetur.</p>
+				<p>Dr. James specializes in the latest technologies and treatments in retinal care, ensuring optimal vision health for his patients.</p>
 			</div>
 			<div class="col-lg-4">
 				<div class="skill-list">
-					<h5 class="mb-4">Expertise area</h5>
+					<h5 class="mb-4">Key Specialties</h5>
 					<ul class="list-unstyled department-service">
-						<li><i class="icofont-check mr-2"></i>International Drug Database</li>
-						<li><i class="icofont-check mr-2"></i>Stretchers and Stretcher Accessories</li>
-						<li><i class="icofont-check mr-2"></i>Cushions and Mattresses</li>
-						<li><i class="icofont-check mr-2"></i>Cholesterol and lipid tests</li>
-						<li><i class="icofont-check mr-2"></i>Critical Care Medicine Specialists</li>
-						<li><i class="icofont-check mr-2"></i>Emergency Assistance</li>
+						<li><i class="icofont-check mr-2"></i>Laser Treatments for Retinal Conditions</li>
+						<li><i class="icofont-check mr-2"></i>Diabetic Retinopathy Management</li>
+						<li><i class="icofont-check mr-2"></i>Retinal Detachment Surgery</li>
+						<li><i class="icofont-check mr-2"></i>Macular Degeneration Treatments</li>
+						<li><i class="icofont-check mr-2"></i>OCT and Angiography Diagnostics</li>
 					</ul>
 				</div>
 			</div>
 			<div class="col-lg-4">
-				<div class="sidebar-widget  gray-bg p-4">
-					<h5 class="mb-4">Make Appoinment</h5>
-
+				<div class="sidebar-widget gray-bg p-4">
+					<h5 class="mb-4">Clinic Hours</h5>
 					<ul class="list-unstyled lh-35">
-					  <li class="d-flex justify-content-between align-items-center">
-					    <a href="#">Monday - Friday</a>
-					    <span>9:00 - 17:00</span>
-					  </li>
-					  <li class="d-flex justify-content-between align-items-center">
-					    <a href="#">Saturday</a>
-					    <span>9:00 - 16:00</span>
-					  </li>
-					  <li class="d-flex justify-content-between align-items-center">
-					    <a href="#">Sunday</a>
-					    <span>Closed</span>
-					  </li>
+						<li>Monday - Friday: <span>9:00 - 17:00</span></li>
+						<li>Saturday: <span>9:00 - 14:00</span></li>
+						<li>Sunday: <span>Closed</span></li>
 					</ul>
-
 					<div class="sidebar-contatct-info mt-4">
-						<p class="mb-0">Need Urgent Help?</p>
+						<p>Need Urgent Help?</p>
 						<h3 class="text-color-2">+23-4565-65768</h3>
 					</div>
 				</div>
