--- a/templates/index.html
+++ b/templates/index.html
@@ -96,7 +96,7 @@
             <h2 class="title-color">Advanced Eye Care <br />& Vision Wellness</h2>
             <p class="mt-4 mb-5">We provide top-quality eye care services, ensuring precise diagnosis and treatment for clear vision. Our experts specialize in cataract surgery, LASIK, and general eye health.</p>
 
-            <a href="service.html" class="btn btn-main-2 btn-round-full btn-icon">Our Services<i class="icofont-simple-right ml-3"></i></a>
+            <a href="services" class="btn btn-main-2 btn-round-full btn-icon">What we do<i class="icofont-simple-right ml-3"></i></a>
           </div>
         </div>
       </div>
