--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Orbitor,business,company,agency,modern,bootstrap4,tech,software" />
     <meta name="author" content="themefisher.com" />
 
@@ -37,10 +37,10 @@
             <div class="col-lg-6">
               <ul class="top-bar-info list-inline-item pl-0 mb-0">
                 <li class="list-inline-item">
-                  <a href="mailto:support@gmail.com"><i class="icofont-support-faq mr-2"></i>support@novena.com</a>
+                  <a href="mailto:support@gmail.com"><i class="icofont-support-faq mr-2"></i>support@karunyaeyecare.com</a>
                 </li>
                 <li class="list-inline-item">
-                  <i class="icofont-location-pin mr-2"></i>Address Ta-134/A, New York, USA
+                  <i class="icofont-location-pin mr-2"></i>Kollam , Kerala
                 </li>
               </ul>
             </div>
@@ -88,10 +88,13 @@
                 <a class="nav-link dropdown-toggle" href="department" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Department <i class="icofont-thin-down"></i></a>
                 <ul class="dropdown-menu" aria-labelledby="dropdown02">
                   <li>
-                    <a class="dropdown-item" href="">Treatments</a>
+                    <a class="dropdown-item" href="department">Departments</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="">Eye Problems</a>
+                    <a class="dropdown-item" href="treatments">Treatments</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="eyeproblem">Eye Problems</a>
                   </li>
                 </ul>
               </li>
@@ -101,11 +104,11 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="doctor">Centers</a>
+                <a class="nav-link" href="centers">Centers</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="contact">Gallery</a>
+                <a class="nav-link" href="gallery">Gallery</a>
               </li>
 
               <li class="nav-item">
