--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,8 @@
 
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
   </head>
 
   <body id="top">
@@ -57,7 +59,7 @@
       </div>
       <nav class="navbar navbar-expand-lg navigation" id="navbar">
         <div class="container">
-          <a class="navbar-brand" href="/"><img src="static/images/logo.png" alt="" class="img-fluid" /></a>
+          <a class="navbar-brand" href="/"><img src="static/images/karunyalogo.jpeg" alt="" class="img-fluid" /></a>
 
           <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarmain" aria-controls="navbarmain" aria-expanded="false" aria-label="Toggle navigation"><span class="icofont-navigation-menu"></span></button>
 
@@ -89,6 +91,9 @@
                 <ul class="dropdown-menu" aria-labelledby="dropdown02">
                   <li>
                     <a class="dropdown-item" href="department">Departments</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="specialities">Specialities</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="treatments">Treatments</a>
@@ -126,13 +131,13 @@
 
     <!-- footer Start -->
     <!-- Footer Start -->
-    <footer class="footer section gray-bg">
+    <footer class="footer section white-bg">
       <div class="container">
         <div class="row">
           <div class="col-lg-4 mr-auto col-sm-6">
             <div class="widget mb-5 mb-lg-0">
               <div class="logo mb-4">
-                <img src="static/images/logo.png" alt="Eye Hospital Logo" class="img-fluid" />
+                <img src="static/images/karunyalogo.jpeg" alt="Eye Hospital Logo" class="img-fluid" />
               </div>
               <p>Providing world-class eye care with advanced technology and compassionate service to restore and enhance vision.</p>
               <ul class="list-inline footer-socials mt-4">
