--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,8 +9,8 @@
     <div class="row">
       <div class="col-md-12">
         <div class="block text-center">
-          <span class="text-white">Contact Us</span>
-          <h1 class="text-capitalize mb-5 text-lg">Get in Touch</h1>
+          <span class="text-white">Get in Touch</span>
+          <h1 class="text-capitalize mb-5 text-lg">Contact Us</h1>
 
           <!-- <ul class="list-inline breadcumb-nav">
             <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
@@ -23,34 +23,6 @@
   </div>
 </section>
 <!-- contact form start -->
-
-<section class="section contact-info pb-0">
-    <div class="container">
-         <div class="row">
-            <div class="col-lg-4 col-sm-6 col-md-6">
-                <div class="contact-block mb-4 mb-lg-0">
-                    <i class="icofont-live-support"></i>
-                    <h5>Emergency Helpline</h5>
-                     +1-800-OPTICAL
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 col-md-6">
-                <div class="contact-block mb-4 mb-lg-0">
-                    <i class="icofont-support-faq"></i>
-                    <h5>Email Support</h5>
-                     care@eyehospital.com
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 col-md-6">
-                <div class="contact-block mb-4 mb-lg-0">
-                    <i class="icofont-location-pin"></i>
-                    <h5>Our Location</h5>
-                     123 Vision Street, New York, USA
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 
 <section class="contact-form-wrap section">
     <div class="container">
@@ -111,7 +83,36 @@
     </div>
 </section>
 
-<div class="google-map ">
-    <div id="map"></div>
+<section class="section contact-info pb-0">
+    <div class="container">
+         <div class="row">
+            <div class="col-lg-4 col-sm-6 col-md-6">
+                <div class="contact-block mb-4 mb-lg-0">
+                    <i class="icofont-live-support"></i>
+                    <h5>Emergency Helpline</h5>
+                     +1-800-OPTICAL
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 col-md-6">
+                <div class="contact-block mb-4 mb-lg-0">
+                    <i class="icofont-support-faq"></i>
+                    <h5>Email Support</h5>
+                     care@eyehospital.com
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 col-md-6">
+                <div class="contact-block mb-4 mb-lg-0">
+                    <i class="icofont-location-pin"></i>
+                    <h5>Our Location</h5>
+                     123 Vision Street, New York, USA
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<div class="google-map" style="width: 100%; height: 450px;">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63050.539692750055!2d76.78275339999999!3d9.0035157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b060bf796384583%3A0xe1de9ae1b786c755!2sKarunya%20Eye%20Hospital%20%26%20Opticals!5e0!3m2!1sen!2sin!4v1740202375779!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
+
 {% endblock %}
