--- a/templates/department.html
+++ b/templates/department.html
@@ -9,7 +9,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="block text-center">
-          <span class="text-white">All Department</span>
+          <span class="text-white">Department</span>
           <h1 class="text-capitalize mb-5 text-lg">Care Department</h1>
 
           <!-- <ul class="list-inline breadcumb-nav">
