--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,10 +5,10 @@ html {
 
 body {
   line-height: 1.6;
-  font-family: 'Georgia', serif;
+  font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   font-size: 16px;
-  color: #6F8BA4;
+  color: #03afdf;
   font-weight: 400;
 }
 
@@ -23,7 +23,7 @@ html {
 }
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
-  font-family: 'Georgia', serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 700;
   color: #222;
 }
@@ -58,7 +58,7 @@ p {
 }
 
 .navbar-toggle .icon-bar {
-  background: #223a66;
+  background: #03afdf;
 }
 
 input[type="email"], input[type="password"], input[type="text"], input[type="tel"] {
@@ -70,7 +70,7 @@ input[type="email"], input[type="password"], input[type="text"], input[type="tel
 
 input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focus, input[type="tel"]:focus {
   box-shadow: none;
-  border: 1px solid #223a66;
+  border: 1px solid #03afdf;
 }
 
 .form-control {
@@ -80,7 +80,7 @@ input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focu
 
 .form-control:focus {
   box-shadow: none;
-  border: 1px solid #223a66;
+  border: 1px solid #03afdf;
 }
 
 .py-7 {
@@ -94,7 +94,8 @@ input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focu
   font-weight: 700;
   letter-spacing: .5px;
   padding: .75rem 2rem;
-  font-family: 'Georgia', serif;
+  font-family: 'Montserrat', sans-serif;
+
   text-transform: uppercase;
   border-radius: 5px;
   border: 2px solid transparent;
@@ -112,39 +113,39 @@ input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focu
 }
 
 .btn-main {
-  background: #223a66;
+  background: #03afdf;
   color: #fff;
-  border-color: #223a66;
+  border-color: #03afdf;
 }
 
 .btn-main:hover {
-  background: #e12454;
-  border-color: #e12454;
+  background: #03afdf;
+  border-color: #03afdf;
   color: #fff;
 }
 
 .btn-main-2 {
-  background: #e12454;
+  background: #03afdf;
   color: #fff;
-  border-color: #e12454;
+  border-color: #03afdf;
 }
 
 .btn-main-2:hover {
-  background: #223a66;
+  background: #03afdf;
   color: #fff;
-  border-color: #223a66;
+  border-color: #03afdf;
 }
 
 .btn-solid-border {
-  border: 2px solid #223a66;
+  border: 2px solid #03afdf;
   background: transparent;
-  color: #223a66;
+  color: #03afdf;
 }
 
 .btn-solid-border:hover {
-  border: 2px solid #223a66;
+  border: 2px solid #03afdf;
   color: #fff;
-  background: #223a66;
+  background: #03afdf;
 }
 
 .btn-solid-border:hover.btn-icon i {
@@ -173,9 +174,9 @@ input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focu
 }
 
 .btn-white:hover {
-  background: #223a66;
+  background: #03afdf;
   color: #fff;
-  border-color: #223a66;
+  border-color: #03afdf;
 }
 
 .btn-solid-white {
@@ -205,7 +206,7 @@ input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focu
 }
 
 .bg-primary {
-  background: #223a66;
+  background: #03afdf;
 }
 
 .bg-primary-dark {
@@ -238,7 +239,7 @@ input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focu
 }
 
 .subtitle {
-  color: #223a66;
+  color: #03afdf;
   font-size: 14px;
   letter-spacing: 1px;
 }
@@ -253,7 +254,7 @@ input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focu
   width: 100%;
   height: 100%;
   opacity: 0.9;
-  background: #223a66;
+  background: #03afdf3d;
 }
 
 .overly-2 {
@@ -296,7 +297,7 @@ a {
 }
 
 a:focus, a:hover {
-  color: #e12454;
+  color: #03afdf;
   text-decoration: none;
 }
 
@@ -340,11 +341,11 @@ a:focus {
 } */
 
 .title-color {
-  color: #223a66;
+  color: #03afdf;
 }
 
 .secondary-bg {
-  background: #223a66;
+  background: #03afdf;
 }
 
 .section-title {
@@ -352,7 +353,7 @@ a:focus {
 }
 
 .section-title h2 {
-  color: #223a66;
+  color: #03afdf;
 }
 
 .text-lg {
@@ -360,7 +361,7 @@ a:focus {
 }
 
 .gray-bg {
-  background: #f4f9fc;
+  background: #e5e5e5;
 }
 
 /* @media (max-width: 480px) {
@@ -383,7 +384,7 @@ a:focus {
   font-weight: 600;
   padding: 10px 15px;
   color: #222;
-  font-family: 'Georgia', serif;
+  font-family: 'Montserrat', sans-serif;
   text-transform: capitalize;
   font-size: 16px;
   transition: all .25s ease;
@@ -394,7 +395,7 @@ a:focus {
 }
 
 .navbar-brand {
-  margin-top: 10px;
+  margin-top: 0px;
 }
 
 .dropdown .dropdown-menu {
@@ -410,7 +411,7 @@ a:focus {
   visibility: hidden;
   transition: all 0.3s ease-out 0s;
   border: 0px;
-  border-top: 5px solid #e12454;
+  border-top: 5px solid #03afdf;
   border-radius: 0px;
 }
 
@@ -429,11 +430,11 @@ a:focus {
 }
 
 .dropdown .dropdown-item:hover {
-  color: #e12454;
+  color: #03afdf;
 }
 
 .header-top-bar {
-  background: #223a66;
+  background: #03afdf;
   font-size: 16px;
   padding: 10px 0px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
@@ -466,9 +467,9 @@ a:focus {
   position: relative;
   overflow: hidden;
   background: #fff;
-  background: url("../images/bg/slider-bg-1.jpg") no-repeat;
+  background: url("https://img.freepik.com/free-photo/woman-getting-eye-exam-ophthalmologist-office_52683-137896.jpg?t=st=1740203653~exp=1740207253~hmac=fe4c1ac9430cb5fe3e2ade70bbdd61fece22104c8ae675b4bd24f836848fb063&w=1060") no-repeat;
   background-size: cover;
-  min-height: 550px;
+  min-height: 100vh;
 }
 
 .banner .block {
@@ -480,7 +481,7 @@ a:focus {
   line-height: 1.2;
   letter-spacing: -1.2px;
   text-transform: capitalize;
-  color: #223a66;
+  color: #03afdf;
 }
 
 .letter-spacing {
@@ -488,17 +489,17 @@ a:focus {
 }
 
 .text-color {
-  color: #223a66;
+  color: #03afdf;
 }
 
 .text-color-2 {
-  color: #e12454;
+  color: #03afdf;
 }
 
 .divider {
   width: 40px;
   height: 5px;
-  background: #e12454;
+  background: #03afdf;
 }
 
 @media (max-width: 480px) {
@@ -556,7 +557,7 @@ a:focus {
   content: "";
   right: 82px;
   bottom: 0px;
-  background: #223a66;
+  background: #03afdf;
   padding: 2px;
 }
 
@@ -602,11 +603,11 @@ a:focus {
 
 .feature-item .feature-icon i {
   font-size: 50px;
-  color: #223a66;
+  color: #03afdf;
 }
 
 .feature-item h4 {
-  color: #223a66;
+  color: #03afdf;
 }
 
 .feature-item p {
@@ -670,7 +671,7 @@ a:focus {
 }
 
 .service i {
-  color: #e12454;
+  color: #03afdf;
 }
 
 .service h4 {
@@ -703,7 +704,7 @@ a:focus {
 }
 
 .department-service li i {
-  color: #e12454;
+  color: #03afdf;
 }
 
 .doctors .btn-group .btn {
@@ -718,7 +719,7 @@ a:focus {
 .doctors .btn-group .btn.active {
   box-shadow: none !important;
   border-color: transparent;
-  background: #e12454;
+  background: #03afdf;
   color: #fff;
 }
 
@@ -730,14 +731,14 @@ a:focus {
 .doctors .btn-group .btn:focus {
   box-shadow: none !important;
   border-color: transparent;
-  background: #e12454;
+  background: #03afdf;
   color: #fff;
 }
 
 .doctors .btn-group .btn:hover {
   box-shadow: none !important;
   border-color: transparent;
-  background: #e12454;
+  background: #03afdf;
   color: #fff;
 }
 
@@ -775,11 +776,11 @@ a:focus {
 
 .doctor-info li i {
   margin-right: 20px;
-  color: #e12454;
+  color: #03afdf;
 }
 
 .read-more {
-  color: #223a66;
+  color: #03afdf;
 }
 
 /* @media (max-width: 480px) {
@@ -830,7 +831,7 @@ a:focus {
 }
 
 .text-color-primary {
-  color: #223a66;
+  color: #03afdf;
 }
 
 .cta-section {
@@ -928,7 +929,7 @@ a:focus {
 
 .testimonial-block.style-2 i {
   bottom: -20px;
-  color: #e12454;
+  color: #03afdf;
   opacity: .3;
 }
 
@@ -1024,7 +1025,7 @@ a:focus {
   font-size: 50px;
   margin-bottom: 15px;
   display: inline-block;
-  color: #e12454;
+  color: #03afdf;
 }
 
 .blog-item-content h2 {
@@ -1048,12 +1049,12 @@ a:focus {
 }
 
 .nav-links .page-numbers:hover {
-  background: #223a66;
+  background: #03afdf;
   color: #fff;
 }
 
 .nav-links .page-numbers.current {
-  background: #223a66;
+  background: #03afdf;
   color: #fff;
 }
 
@@ -1077,10 +1078,10 @@ a:focus {
 
 .quote {
   font-size: 22px;
-  color: #223a66;
+  color: #03afdf;
   padding: 40px;
   font-style: italic;
-  border-left: 5px solid #e12454;
+  border-left: 5px solid #03afdf;
   margin: 25px 0px;
 }
 
@@ -1142,7 +1143,7 @@ a:focus {
 }
 
 .post-comments .comment-author a {
-  color: #223a66;
+  color: #03afdf;
   font-size: 14px;
   text-transform: uppercase;
 }
@@ -1155,7 +1156,7 @@ a:focus {
 }
 
 .post-comments .comment-button {
-  color: #223a66;
+  color: #03afdf;
   display: inline-block;
   margin-left: 5px;
   font-size: 12px;
@@ -1167,7 +1168,7 @@ a:focus {
 }
 
 .post-comments .comment-button:hover {
-  color: #223a66;
+  color: #03afdf;
 }
 
 .post-excerpt {
@@ -1189,7 +1190,7 @@ a:focus {
 .post-excerpt blockquote.quote-post p {
   line-height: 30px;
   font-size: 20px;
-  color: #223a66;
+  color: #03afdf;
 }
 
 .comments-section {
@@ -1237,7 +1238,7 @@ a:focus {
 }
 
 .comment-wrap .media .media-heading a {
-  color: #223a66;
+  color: #03afdf;
   font-size: 13px;
 }
 
@@ -1262,7 +1263,7 @@ a:focus {
 
 .comment-reply-form input:focus, .comment-reply-form textarea:focus {
   box-shadow: none;
-  border: 1px solid #223a66;
+  border: 1px solid #03afdf;
 }
 
 .comment-reply-form textarea, .comment-reply-form .btn-main {
@@ -1287,7 +1288,7 @@ a:focus {
   bottom: 0px;
   width: 35px;
   height: 3px;
-  background: #e12454;
+  background: #03afdf;
 }
 
 .sidebar-widget.latest-post .media img {
@@ -1313,7 +1314,7 @@ a:focus {
 }
 
 .sidebar-widget.category ul li a:hover {
-  color: #223a66;
+  color: #03afdf;
   padding-left: 5px;
 }
 
@@ -1339,7 +1340,7 @@ a:focus {
 
 .sidebar-widget.tags a:hover {
   color: #fff;
-  background: #223a66;
+  background: #03afdf;
 }
 
 .sidebar-widget.schedule-widget {
@@ -1380,11 +1381,11 @@ a:focus {
 }
 
 .logo h3 {
-  color: #223a66;
+  color: #03afdf;
 }
 
 .logo span {
-  color: #223a66;
+  color: #03afdf;
 }
 
 .widget .divider {
@@ -1392,7 +1393,7 @@ a:focus {
 }
 
 .widget h4 {
-  color: #223a66;
+  color: #03afdf;
 }
 
 .widget .footer-menu a {
@@ -1400,7 +1401,7 @@ a:focus {
 }
 
 .widget .footer-menu a:hover {
-  color: #e12454;
+  color:#03afdf;
 }
 
 .footer-contact-block span {
@@ -1433,7 +1434,7 @@ a:focus {
 }
 
 .widget-contact h6 i {
-  color: #e12454;
+  color: #03afdf;
 }
 
 .subscribe {
@@ -1455,7 +1456,7 @@ a:focus {
 
 .backtop {
   position: fixed;
-  background: #e12454;
+  background: #03afdf;
   z-index: 9999;
   display: inline-block;
   left: 20px;
