--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -24,7 +24,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
           <div class="section-title">
-            <h2>Meet Our Specialists</h2>
+            <h2>Meet Our Eye Specialists</h2>
             <div class="divider mx-auto my-4"></div>
             <p>Our dedicated team of ophthalmologists and eye specialists is here to provide exceptional vision care using the latest advancements in eye treatment.</p>
           </div>
@@ -34,10 +34,6 @@
       <div class="col-12 text-center mb-5">
         <div class="btn-group btn-group-toggle" data-toggle="buttons">
           <label class="btn active"><input type="radio" name="shuffle-filter" value="all" checked="checked" />All Specialties</label>
-          <label class="btn"><input type="radio" name="shuffle-filter" value="cat1" />Cataract Surgery</label>
-          <label class="btn"><input type="radio" name="shuffle-filter" value="cat2" />Lasik Surgery</label>
-          <label class="btn"><input type="radio" name="shuffle-filter" value="cat3" />Retina Treatment</label>
-          <label class="btn"><input type="radio" name="shuffle-filter" value="cat4" />Glaucoma Care</label>
         </div>
       </div>
 
@@ -50,8 +46,8 @@
               </div>
             </div>
             <div class="content mt-3">
-              <h4 class="mb-0"><a href="doctor-single.html">Dr. Thomas Henry</a></h4>
-              <p>Cataract Specialist</p>
+              <h4 class="mb-0"><a href="doctor-single.html">DR. JOJU.K. EAPEN</a></h4>
+              <p>MBBS, D.O (PHACO SURGEON)</p>
             </div>
           </div>
         </div>
@@ -64,8 +60,8 @@
               </div>
             </div>
             <div class="content mt-3">
-              <h4 class="mb-0"><a href="doctor-single.html">Dr. Harrison Samuel</a></h4>
-              <p>Lasik Surgery Expert</p>
+              <h4 class="mb-0"><a href="doctor-single.html">DR. K.P. MATHEWS</a></h4>
+              <p>MBBS, DOMS (CONSULTANT OPHTHALMOLOGIST)</p>
             </div>
           </div>
         </div>
@@ -78,8 +74,8 @@
               </div>
             </div>
             <div class="content mt-3">
-              <h4 class="mb-0"><a href="doctor-single.html">Dr. Alexander James</a></h4>
-              <p>Retina Specialist</p>
+              <h4 class="mb-0"><a href="doctor-single.html">DR. RAMALINGAM ARJUNA REDDY</a></h4>
+              <p>MBBS, D.A (ANAESTHETIST)</p>
             </div>
           </div>
         </div>
@@ -92,8 +88,112 @@
               </div>
             </div>
             <div class="content mt-3">
-              <h4 class="mb-0"><a href="doctor-single.html">Dr. Edward John</a></h4>
-              <p>Glaucoma Expert</p>
+              <h4 class="mb-0"><a href="doctor-single.html">DR. LEELA MATHEW</a></h4>
+              <p>MBBS, MS, DO (CONSULTANT OPHTHALMOLOGIST)</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row shuffle-wrapper portfolio-gallery">
+        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat1"]'>
+          <div class="position-relative doctor-inner-box">
+            <div class="doctor-profile">
+              <div class="doctor-img">
+                <img src="static/images/team/1.jpg" alt="doctor-image" class="img-fluid w-100" />
+              </div>
+            </div>
+            <div class="content mt-3">
+              <h4 class="mb-0"><a href="doctor-single.html">DR. MAREEN ABRAHAM</a></h4>
+              <p>MS, DO, FCLI (CONSULTANT OPHTHALMOLOGIST)</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat2"]'>
+          <div class="position-relative doctor-inner-box">
+            <div class="doctor-profile">
+              <div class="doctor-img">
+                <img src="static/images/team/2.jpg" alt="doctor-image" class="img-fluid w-100" />
+              </div>
+            </div>
+            <div class="content mt-3">
+              <h4 class="mb-0"><a href="doctor-single.html">DR. PREMI VARGHESE</a></h4>
+              <p>MBBS, DO, FIAS (PHACO SURGEON)</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat3"]'>
+          <div class="position-relative doctor-inner-box">
+            <div class="doctor-profile">
+              <div class="doctor-img">
+                <img src="static/images/team/3.jpg" alt="doctor-image" class="img-fluid w-100" />
+              </div>
+            </div>
+            <div class="content mt-3">
+              <h4 class="mb-0"><a href="doctor-single.html">DR. SARA ANSA RENOSH</a></h4>
+              <p>MBBS, DO (CONSULTANT OPHTHALMOLOGIST)</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat4"]'>
+          <div class="position-relative doctor-inner-box">
+            <div class="doctor-profile">
+              <div class="doctor-img">
+                <img src="static/images/team/4.jpg" alt="doctor-image" class="img-fluid w-100" />
+              </div>
+            </div>
+            <div class="content mt-3">
+              <h4 class="mb-0"><a href="doctor-single.html">DR. SALINI SASIDHARAN</a></h4>
+              <p>MBBS, M.S, FELLOW MEDICAL RETINA
+                (RETINA CONSULTANT)
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row shuffle-wrapper portfolio-gallery">
+        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat1"]'>
+          <div class="position-relative doctor-inner-box">
+            <div class="doctor-profile">
+              <div class="doctor-img">
+                <img src="static/images/team/1.jpg" alt="doctor-image" class="img-fluid w-100" />
+              </div>
+            </div>
+            <div class="content mt-3">
+              <h4 class="mb-0"><a href="doctor-single.html">DR. ATHULYA.S</a></h4>
+              <p>MBBS, DNB (PHACO SURGEON)</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat2"]'>
+          <div class="position-relative doctor-inner-box">
+            <div class="doctor-profile">
+              <div class="doctor-img">
+                <img src="static/images/team/2.jpg" alt="doctor-image" class="img-fluid w-100" />
+              </div>
+            </div>
+            <div class="content mt-3">
+              <h4 class="mb-0"><a href="doctor-single.html">DR. SREELEKSHMI S.R</a></h4>
+              <p>MBBS, M.S (CONSULTANT OPHTHALMOLOGIST)</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat3"]'>
+          <div class="position-relative doctor-inner-box">
+            <div class="doctor-profile">
+              <div class="doctor-img">
+                <img src="static/images/team/3.jpg" alt="doctor-image" class="img-fluid w-100" />
+              </div>
+            </div>
+            <div class="content mt-3">
+              <h4 class="mb-0"><a href="doctor-single.html">DR. MALU AJAY</a></h4>
+              <p>MBBS, MD DNB GENERAL MEDICINE
+                CONSULTANT PHYSICIAN
+                </p>
             </div>
           </div>
         </div>
