--- a/templates/index.html
+++ b/templates/index.html
@@ -46,17 +46,18 @@
               <div class="feature-icon mb-4">
                 <i class="icofont-ui-clock"></i>
               </div>
-              <span>Clinic Hours</span>
-              <h4 class="mb-3">Working Hours</h4>
+              <span>Working Hours</span>
               <ul class="w-hours list-unstyled">
+                <h4 class="mt-2">OP</h4>
                 <li class="d-flex justify-content-between">
-                  Mon - Fri : <span>8:00 AM - 6:00 PM</span>
+                  Mon - Sat : <span>9.30 AM to 6.00 PM</span>
+                </li>
+                <h4 class="mt-2">Optical Section</h4>
+                <li class="d-flex justify-content-between">
+                  Mon - Sat : <span>9.30 AM to 7.30 PM</span>
                 </li>
                 <li class="d-flex justify-content-between">
-                  Saturday : <span>9:00 AM - 5:00 PM</span>
-                </li>
-                <li class="d-flex justify-content-between">
-                  Sunday : <span>Closed</span>
+                  Sunday : <span>Holiday</span>
                 </li>
               </ul>
             </div>
@@ -82,21 +83,21 @@
       <div class="row align-items-center">
         <div class="col-lg-4 col-sm-6">
           <div class="about-img">
-            <img src="static/images/about/img-1.jpg" alt="" class="img-fluid" />
-            <img src="static/images/about/img-2.jpg" alt="" class="img-fluid mt-4" />
+            <img src="https://img.freepik.com/free-photo/eye-doctor-with-female-patient-examination-modern-clinic-ophthalmologist-is-using-special-medical-equipment-eye-health_657921-165.jpg?t=st=1740199777~exp=1740203377~hmac=5f4715e8b9d6c3f574129ead8e9087567ad45e8a1287a93f7fc5f442df72ecf8&w=1060" alt="" class="img-fluid" />
+            <img src="https://img.freepik.com/free-photo/doctor-putting-glasses-woman_23-2147648736.jpg?t=st=1740199804~exp=1740203404~hmac=279bcbac6a1059567ed42a63cf20dc2cbdfd0899e914bcd3e53214874e8ca6fa&w=1060" alt="" class="img-fluid mt-4" />
           </div>
         </div>
         <div class="col-lg-4 col-sm-6">
           <div class="about-img mt-4 mt-lg-0">
-            <img src="static/images/about/img-3.jpg" alt="" class="img-fluid" />
+            <img src="https://img.freepik.com/free-photo/little-girl-checking-up-her-sight-ophthalmology-center_1303-27499.jpg?t=st=1740199788~exp=1740203388~hmac=c495978c289e00152accaf8fef37b967c75914652b59c1d318549f9313094c47&w=1060" alt="" class="img-fluid" />
           </div>
         </div>
         <div class="col-lg-4">
           <div class="about-content pl-4 mt-4 mt-lg-0">
-            <h2 class="title-color">Advanced Eye Care <br />& Vision Wellness</h2>
-            <p class="mt-4 mb-5">We provide top-quality eye care services, ensuring precise diagnosis and treatment for clear vision. Our experts specialize in cataract surgery, LASIK, and general eye health.</p>
+            <h2 class="title-color">About Karunya Eyecare</h2>
+            <p class="mt-4 mb-5">Established in 1985 as K.K.Opticals & Eye Clinic by Mr. Tilly B George, KEH has grown into a trusted NABH-certified eye hospital with advanced treatments and three modern centers in Kerala.</p>
 
-            <a href="services" class="btn btn-main-2 btn-round-full btn-icon">What we do<i class="icofont-simple-right ml-3"></i></a>
+            <a href="about" class="btn btn-main-2 btn-round-full btn-icon">Know more<i class="fa-solid fa-angles-right text-white"></i></a>
           </div>
         </div>
       </div>
@@ -141,15 +142,15 @@
   </section>
   <!-- CTA End -->
 
-  <!-- Services Start -->
+  <!-- Specialties Start -->
   <section class="section service gray-bg">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-7 text-center">
           <div class="section-title">
-            <h2>Comprehensive Eye Care Services</h2>
+            <h2>Our Specialities</h2>
             <div class="divider mx-auto my-4"></div>
-            <p>Providing state-of-the-art eye care services to ensure optimal vision and eye health for all our patients.</p>
+            <p>Delivering comprehensive and advanced eye care services with cutting-edge technology and expertise.</p>
           </div>
         </div>
       </div>
@@ -158,11 +159,11 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-laboratory text-lg"></i>
-              <h4 class="mt-3 mb-3">Advanced Eye Testing</h4>
+              <i class="icofont-eye text-lg"></i>
+              <h4 class="mt-3 mb-3">General Ophthalmology</h4>
             </div>
             <div class="content">
-              <p class="mb-4">Comprehensive diagnostic tests to assess and monitor eye health.</p>
+              <p class="mb-4">Complete eye check-ups and treatment for general eye conditions.</p>
             </div>
           </div>
         </div>
@@ -170,11 +171,11 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-heart-beat-alt text-lg"></i>
-              <h4 class="mt-3 mb-3">Cataract Surgery</h4>
+              <i class="icofont-surgery text-lg"></i>
+              <h4 class="mt-3 mb-3">Minimally Invasive Cataract Surgery (MICS)</h4>
             </div>
             <div class="content">
-              <p class="mb-4">Safe and effective cataract removal procedures to restore clear vision.</p>
+              <p class="mb-4">Advanced cataract surgery with quick recovery and minimal discomfort.</p>
             </div>
           </div>
         </div>
@@ -182,11 +183,11 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-tooth text-lg"></i>
-              <h4 class="mt-3 mb-3">LASIK & Refractive Surgery</h4>
+              <i class="icofont-lens text-lg"></i>
+              <h4 class="mt-3 mb-3">Premium/Multifocal Implants (IOL)</h4>
             </div>
             <div class="content">
-              <p class="mb-4">Laser vision correction for patients with myopia, hyperopia, and astigmatism.</p>
+              <p class="mb-4">High-quality intraocular lenses for enhanced vision correction.</p>
             </div>
           </div>
         </div>
@@ -194,11 +195,11 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-crutch text-lg"></i>
-              <h4 class="mt-3 mb-3">Glaucoma Treatment</h4>
+              <i class="icofont-search-1 text-lg"></i>
+              <h4 class="mt-3 mb-3">Glaucoma Diagnosis & Screening</h4>
             </div>
             <div class="content">
-              <p class="mb-4">Specialized care to manage and treat glaucoma effectively.</p>
+              <p class="mb-4">Early detection and management of glaucoma to prevent vision loss.</p>
             </div>
           </div>
         </div>
@@ -206,11 +207,11 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-brain-alt text-lg"></i>
-              <h4 class="mt-3 mb-3">Retina Care</h4>
+              <i class="icofont-retina-scan text-lg"></i>
+              <h4 class="mt-3 mb-3">Retinal Services</h4>
             </div>
             <div class="content">
-              <p class="mb-4">Advanced diagnostics and treatments for retinal disorders.</p>
+              <p class="mb-4">Advanced treatments for retinal diseases and disorders.</p>
             </div>
           </div>
         </div>
@@ -218,18 +219,24 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-dna-alt-1 text-lg"></i>
-              <h4 class="mt-3 mb-3">Pediatric Eye Care</h4>
+              <i class="icofont-eye-alt text-lg"></i>
+              <h4 class="mt-3 mb-3">Corneal Clinic</h4>
             </div>
             <div class="content">
-              <p class="mb-4">Comprehensive eye examinations and treatments for children.</p>
+              <p class="mb-4">Expert corneal care for infections, injuries, and transplants.</p>
             </div>
           </div>
         </div>
       </div>
+
+      <div class="row justify-content-center mt-4">
+        <div class="col-lg-4 text-center">
+          <a href="specialities" class="btn btn-main-2 btn-round-full btn-icon">Know more<i class="fa-solid fa-angles-right"></i></a>
+        </div>
+      </div>
     </div>
   </section>
-  <!-- End Services Section -->
+  <!-- End Specialties Section -->
 
   <section class="section appoinment">
     <div class="container">
@@ -395,6 +402,60 @@
       </div>
     </div>
   </section>
+
+  <!-- Our Mission Start -->
+  <section class="section about">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-4">
+          <div class="about-content pr-4 mt-4 mt-lg-0">
+            <h2 class="title-color">OUR MISSION</h2>
+            <p class="mt-4 mb-5">To provide quality eye care treatment to the people, as per our vision, by establishing as many centres as possible in both inside and outside India.</p>
+            <a href="" class="btn btn-main-2 btn-round-full btn-icon">Learn More<i class="fa-solid fa-angles-right text-white"></i></a>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <div class="about-img">
+            <img src="https://img.freepik.com/free-photo/doctor-putting-glasses-woman_23-2147648736.jpg?t=st=1740199804~exp=1740203404~hmac=279bcbac6a1059567ed42a63cf20dc2cbdfd0899e914bcd3e53214874e8ca6fa&w=1060" alt="" class="img-fluid" />
+            <img src="https://img.freepik.com/free-photo/eye-doctor-with-female-patient-examination-modern-clinic-ophthalmologist-is-using-special-medical-equipment-eye-health_657921-165.jpg?t=st=1740199777~exp=1740203377~hmac=5f4715e8b9d6c3f574129ead8e9087567ad45e8a1287a93f7fc5f442df72ecf8&w=1060" alt="" class="img-fluid mt-4" />
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <div class="about-img mt-4 mt-lg-0">
+            <img src="https://img.freepik.com/free-photo/little-girl-checking-up-her-sight-ophthalmology-center_1303-27499.jpg?t=st=1740199788~exp=1740203388~hmac=c495978c289e00152accaf8fef37b967c75914652b59c1d318549f9313094c47&w=1060" alt="" class="img-fluid" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Our Mission End -->
+
+  <!-- Our Vision Start -->
+  <section class="section about">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-4 col-sm-6">
+          <div class="about-img">
+            <img src="https://img.freepik.com/free-photo/doctor-putting-glasses-woman_23-2147648736.jpg?t=st=1740199804~exp=1740203404~hmac=279bcbac6a1059567ed42a63cf20dc2cbdfd0899e914bcd3e53214874e8ca6fa&w=1060" alt="" class="img-fluid" />
+            <img src="https://img.freepik.com/free-photo/eye-doctor-with-female-patient-examination-modern-clinic-ophthalmologist-is-using-special-medical-equipment-eye-health_657921-165.jpg?t=st=1740199777~exp=1740203377~hmac=5f4715e8b9d6c3f574129ead8e9087567ad45e8a1287a93f7fc5f442df72ecf8&w=1060" alt="" class="img-fluid mt-4" />
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <div class="about-img mt-4 mt-lg-0">
+            <img src="https://img.freepik.com/free-photo/little-girl-checking-up-her-sight-ophthalmology-center_1303-27499.jpg?t=st=1740199788~exp=1740203388~hmac=c495978c289e00152accaf8fef37b967c75914652b59c1d318549f9313094c47&w=1060" alt="" class="img-fluid" />
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="about-content pr-4 mt-4 mt-lg-0">
+            <h2 class="title-color">OUR VISION</h2>
+            <p class="mt-4 mb-5">Make available the advanced, higher and technology in the eye care treatment to all needy people at affordable costs and accessible locations.</p>
+            <a href="" class="btn btn-main-2 btn-round-full btn-icon">Learn More<i class="fa-solid fa-angles-right text-white"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Our Vision End -->
 
   <!-- Start About Us Section -->
   <section class="section clients">
