--- a/templates/index.html
+++ b/templates/index.html
@@ -32,15 +32,6 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="feature-block d-lg-flex">
-            <div class="feature-item mb-5 mb-lg-0">
-              <div class="feature-icon mb-4">
-                <i class="icofont-eye-alt"></i>
-              </div>
-              <span>24/7 Eye Care</span>
-              <h4 class="mb-3">Book an Eye Checkup</h4>
-              <p class="mb-4">Receive round-the-clock support for any eye emergency. We specialize in comprehensive eye care services.</p>
-              <a href="appointment.html" class="btn btn-main btn-round-full">Schedule an Appointment</a>
-            </div>
 
             <div class="feature-item mb-5 mb-lg-0">
               <div class="feature-icon mb-4">
@@ -64,6 +55,16 @@
 
             <div class="feature-item mb-5 mb-lg-0">
               <div class="feature-icon mb-4">
+                <i class="icofont-eye-alt"></i>
+              </div>
+              <span>24/7 Eye Care</span>
+              <h4 class="mb-3">Book an Eye Checkup</h4>
+              <p class="mb-4">Receive round-the-clock support for any eye emergency. We specialize in comprehensive eye care services.</p>
+              <a href="appointment.html" class="btn btn-main btn-round-full">Schedule an Appointment</a>
+            </div>
+
+            <div class="feature-item mb-5 mb-lg-0">
+              <div class="feature-icon mb-4">
                 <i class="icofont-phone"></i>
               </div>
               <span>Emergency Eye Care</span>
@@ -83,13 +84,13 @@
       <div class="row align-items-center">
         <div class="col-lg-4 col-sm-6">
           <div class="about-img">
-            <img src="https://img.freepik.com/free-photo/eye-doctor-with-female-patient-examination-modern-clinic-ophthalmologist-is-using-special-medical-equipment-eye-health_657921-165.jpg?t=st=1740199777~exp=1740203377~hmac=5f4715e8b9d6c3f574129ead8e9087567ad45e8a1287a93f7fc5f442df72ecf8&w=1060" alt="" class="img-fluid" />
-            <img src="https://img.freepik.com/free-photo/doctor-putting-glasses-woman_23-2147648736.jpg?t=st=1740199804~exp=1740203404~hmac=279bcbac6a1059567ed42a63cf20dc2cbdfd0899e914bcd3e53214874e8ca6fa&w=1060" alt="" class="img-fluid mt-4" />
+            <img src="https://media.istockphoto.com/id/1189362136/photo/eye-doctor-with-female-patient-during-an-examination-in-modern-clinic.jpg?s=612x612&w=0&k=20&c=jubMfA5uM3Boue5TtzGnBjdpZgo7AD8URPvjwh21KTA=" alt="" class="img-fluid" />
+            <img src="https://media.istockphoto.com/id/1189208254/photo/side-view-shot-of-female-doctor-and-patient-in-ophthalmology-clinic.jpg?s=612x612&w=0&k=20&c=JAn-AoGgm-OzhUTVV4HCsnImH3wpXcsXMa07Sgnr2Co=" alt="" class="img-fluid mt-4" />
           </div>
         </div>
         <div class="col-lg-4 col-sm-6">
           <div class="about-img mt-4 mt-lg-0">
-            <img src="https://img.freepik.com/free-photo/little-girl-checking-up-her-sight-ophthalmology-center_1303-27499.jpg?t=st=1740199788~exp=1740203388~hmac=c495978c289e00152accaf8fef37b967c75914652b59c1d318549f9313094c47&w=1060" alt="" class="img-fluid" />
+            <img src="https://media.istockphoto.com/id/930864180/photo/doctor-and-patient-in-ophthalmology-clinic.jpg?s=612x612&w=0&k=20&c=DKm22bzKnqEjmETFWBtmcfDRaFoyAZAg4p4ywp4Y17M=" alt="" class="img-fluid" />
           </div>
         </div>
         <div class="col-lg-4">
@@ -231,7 +232,7 @@
 
       <div class="row justify-content-center mt-4">
         <div class="col-lg-4 text-center">
-          <a href="specialities" class="btn btn-main-2 btn-round-full btn-icon">Know more<i class="fa-solid fa-angles-right"></i></a>
+          <a href="specialities" class="btn btn-main-2 btn-round-full btn-icon">Know more<i class="fa-solid fa-angles-right text-white"></i></a>
         </div>
       </div>
     </div>
@@ -309,7 +310,7 @@
                 <textarea name="message" id="message" class="form-control" rows="6" placeholder="Describe Your Eye Concern"></textarea>
               </div>
 
-              <a class="btn btn-main btn-round-full" href="appoinment.html">Book Your Appointment <i class="icofont-simple-right ml-2"></i></a>
+              <a class="btn btn-main btn-round-full" href="appoinment.html">Book Your Appointment <i class="fa-solid fa-angles-right text-white"></i></a>
             </form>
           </div>
         </div>
@@ -402,60 +403,6 @@
       </div>
     </div>
   </section>
-
-  <!-- Our Mission Start -->
-  <section class="section about">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-4">
-          <div class="about-content pr-4 mt-4 mt-lg-0">
-            <h2 class="title-color">OUR MISSION</h2>
-            <p class="mt-4 mb-5">To provide quality eye care treatment to the people, as per our vision, by establishing as many centres as possible in both inside and outside India.</p>
-            <a href="" class="btn btn-main-2 btn-round-full btn-icon">Learn More<i class="fa-solid fa-angles-right text-white"></i></a>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <div class="about-img">
-            <img src="https://img.freepik.com/free-photo/doctor-putting-glasses-woman_23-2147648736.jpg?t=st=1740199804~exp=1740203404~hmac=279bcbac6a1059567ed42a63cf20dc2cbdfd0899e914bcd3e53214874e8ca6fa&w=1060" alt="" class="img-fluid" />
-            <img src="https://img.freepik.com/free-photo/eye-doctor-with-female-patient-examination-modern-clinic-ophthalmologist-is-using-special-medical-equipment-eye-health_657921-165.jpg?t=st=1740199777~exp=1740203377~hmac=5f4715e8b9d6c3f574129ead8e9087567ad45e8a1287a93f7fc5f442df72ecf8&w=1060" alt="" class="img-fluid mt-4" />
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <div class="about-img mt-4 mt-lg-0">
-            <img src="https://img.freepik.com/free-photo/little-girl-checking-up-her-sight-ophthalmology-center_1303-27499.jpg?t=st=1740199788~exp=1740203388~hmac=c495978c289e00152accaf8fef37b967c75914652b59c1d318549f9313094c47&w=1060" alt="" class="img-fluid" />
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- Our Mission End -->
-
-  <!-- Our Vision Start -->
-  <section class="section about">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-4 col-sm-6">
-          <div class="about-img">
-            <img src="https://img.freepik.com/free-photo/doctor-putting-glasses-woman_23-2147648736.jpg?t=st=1740199804~exp=1740203404~hmac=279bcbac6a1059567ed42a63cf20dc2cbdfd0899e914bcd3e53214874e8ca6fa&w=1060" alt="" class="img-fluid" />
-            <img src="https://img.freepik.com/free-photo/eye-doctor-with-female-patient-examination-modern-clinic-ophthalmologist-is-using-special-medical-equipment-eye-health_657921-165.jpg?t=st=1740199777~exp=1740203377~hmac=5f4715e8b9d6c3f574129ead8e9087567ad45e8a1287a93f7fc5f442df72ecf8&w=1060" alt="" class="img-fluid mt-4" />
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <div class="about-img mt-4 mt-lg-0">
-            <img src="https://img.freepik.com/free-photo/little-girl-checking-up-her-sight-ophthalmology-center_1303-27499.jpg?t=st=1740199788~exp=1740203388~hmac=c495978c289e00152accaf8fef37b967c75914652b59c1d318549f9313094c47&w=1060" alt="" class="img-fluid" />
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="about-content pr-4 mt-4 mt-lg-0">
-            <h2 class="title-color">OUR VISION</h2>
-            <p class="mt-4 mb-5">Make available the advanced, higher and technology in the eye care treatment to all needy people at affordable costs and accessible locations.</p>
-            <a href="" class="btn btn-main-2 btn-round-full btn-icon">Learn More<i class="fa-solid fa-angles-right text-white"></i></a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- Our Vision End -->
 
   <!-- Start About Us Section -->
   <section class="section clients">
