--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   font-size: 16px;
-  color: #03afdf;
+  color: #005e79;
   font-weight: 400;
 }
 
@@ -41,7 +41,7 @@ h3, .h3 {
 }
 
 h4, .h4 {
-  font-size: 1.3rem;
+  font-size: 1rem;
   line-height: 30px;
 }
 
@@ -58,7 +58,7 @@ p {
 }
 
 .navbar-toggle .icon-bar {
-  background: #03afdf;
+  background: #005e79;
 }
 
 input[type="email"], input[type="password"], input[type="text"], input[type="tel"] {
@@ -70,7 +70,7 @@ input[type="email"], input[type="password"], input[type="text"], input[type="tel
 
 input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focus, input[type="tel"]:focus {
   box-shadow: none;
-  border: 1px solid #03afdf;
+  border: 1px solid #005e79;
 }
 
 .form-control {
@@ -80,7 +80,7 @@ input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focu
 
 .form-control:focus {
   box-shadow: none;
-  border: 1px solid #03afdf;
+  border: 1px solid #005e79;
 }
 
 .py-7 {
@@ -113,39 +113,39 @@ input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focu
 }
 
 .btn-main {
-  background: #03afdf;
+  background: #005e79;
   color: #fff;
-  border-color: #03afdf;
+  border-color: #005e79;
 }
 
 .btn-main:hover {
-  background: #03afdf;
-  border-color: #03afdf;
+  background: #005e79;
+  border-color: #005e79;
   color: #fff;
 }
 
 .btn-main-2 {
-  background: #03afdf;
+  background: #005e79;
   color: #fff;
-  border-color: #03afdf;
+  border-color: #005e79;
 }
 
 .btn-main-2:hover {
-  background: #03afdf;
+  background: #005e79;
   color: #fff;
-  border-color: #03afdf;
+  border-color: #005e79;
 }
 
 .btn-solid-border {
-  border: 2px solid #03afdf;
+  border: 2px solid #005e79;
   background: transparent;
-  color: #03afdf;
+  color: #005e79;
 }
 
 .btn-solid-border:hover {
-  border: 2px solid #03afdf;
+  border: 2px solid #005e79;
   color: #fff;
-  background: #03afdf;
+  background: #005e79;
 }
 
 .btn-solid-border:hover.btn-icon i {
@@ -174,9 +174,9 @@ input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focu
 }
 
 .btn-white:hover {
-  background: #03afdf;
+  background: #005e79;
   color: #fff;
-  border-color: #03afdf;
+  border-color: #005e79;
 }
 
 .btn-solid-white {
@@ -206,7 +206,7 @@ input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focu
 }
 
 .bg-primary {
-  background: #03afdf;
+  background: #005e79;
 }
 
 .bg-primary-dark {
@@ -239,7 +239,7 @@ input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focu
 }
 
 .subtitle {
-  color: #03afdf;
+  color: #005e79;
   font-size: 14px;
   letter-spacing: 1px;
 }
@@ -254,7 +254,7 @@ input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focu
   width: 100%;
   height: 100%;
   opacity: 0.9;
-  background: #03afdf3d;
+  background: #005e79;
 }
 
 .overly-2 {
@@ -297,7 +297,7 @@ a {
 }
 
 a:focus, a:hover {
-  color: #03afdf;
+  color: #005e79;
   text-decoration: none;
 }
 
@@ -341,11 +341,11 @@ a:focus {
 } */
 
 .title-color {
-  color: #03afdf;
+  color: #005e79;
 }
 
 .secondary-bg {
-  background: #03afdf;
+  background: #005e79;
 }
 
 .section-title {
@@ -353,7 +353,7 @@ a:focus {
 }
 
 .section-title h2 {
-  color: #03afdf;
+  color: #005e79;
 }
 
 .text-lg {
@@ -411,7 +411,7 @@ a:focus {
   visibility: hidden;
   transition: all 0.3s ease-out 0s;
   border: 0px;
-  border-top: 5px solid #03afdf;
+  border-top: 5px solid #005e79;
   border-radius: 0px;
 }
 
@@ -430,11 +430,11 @@ a:focus {
 }
 
 .dropdown .dropdown-item:hover {
-  color: #03afdf;
+  color: #005e79;
 }
 
 .header-top-bar {
-  background: #03afdf;
+  background: #005e79;
   font-size: 16px;
   padding: 10px 0px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
@@ -458,7 +458,7 @@ a:focus {
 }
 
 .bg-1 {
-  background: url("../images/bg/22.jpg") no-repeat 50% 50%;
+  background: url("https://devansheyeclinic.com/wp-content/uploads/2022/02/slide03.jpg") no-repeat 50% 50%;
   background-size: cover;
   position: relative;
 }
@@ -467,7 +467,7 @@ a:focus {
   position: relative;
   overflow: hidden;
   background: #fff;
-  background: url("https://img.freepik.com/free-photo/woman-getting-eye-exam-ophthalmologist-office_52683-137896.jpg?t=st=1740203653~exp=1740207253~hmac=fe4c1ac9430cb5fe3e2ade70bbdd61fece22104c8ae675b4bd24f836848fb063&w=1060") no-repeat;
+  background: url("https://devansheyeclinic.com/wp-content/uploads/2022/02/slide03.jpg") no-repeat;
   background-size: cover;
   min-height: 100vh;
 }
@@ -481,7 +481,7 @@ a:focus {
   line-height: 1.2;
   letter-spacing: -1.2px;
   text-transform: capitalize;
-  color: #03afdf;
+  color: #005e79;
 }
 
 .letter-spacing {
@@ -489,17 +489,17 @@ a:focus {
 }
 
 .text-color {
-  color: #03afdf;
+  color: #005e79;
 }
 
 .text-color-2 {
-  color: #03afdf;
+  color: #005e79;
 }
 
 .divider {
   width: 40px;
   height: 5px;
-  background: #03afdf;
+  background: #005e79;
 }
 
 @media (max-width: 480px) {
@@ -557,7 +557,7 @@ a:focus {
   content: "";
   right: 82px;
   bottom: 0px;
-  background: #03afdf;
+  background: #005e79;
   padding: 2px;
 }
 
@@ -595,7 +595,7 @@ a:focus {
 .feature-item {
   flex-basis: 33.33%;
   margin: 0px 10px;
-  padding: 40px 30px;
+  padding: 10px 30px;
   background-color: #fff;
   border-radius: 15px 15px 15px 15px;
   box-shadow: 0px 0px 30px 0px rgba(0, 42, 106, 0.1);
@@ -603,11 +603,11 @@ a:focus {
 
 .feature-item .feature-icon i {
   font-size: 50px;
-  color: #03afdf;
+  color: #005e79;
 }
 
 .feature-item h4 {
-  color: #03afdf;
+  color: #005e79;
 }
 
 .feature-item p {
@@ -656,13 +656,14 @@ a:focus {
 }
 
 .service {
-  padding-top: 180px;
+  padding-top: 100px;
 }
 
 .service .service-item {
   background: #fff;
   padding: 30px;
   border-radius: 5px;
+  height: 260px;
 }
 
 .service .icon {
@@ -671,7 +672,7 @@ a:focus {
 }
 
 .service i {
-  color: #03afdf;
+  color: #005e79;
 }
 
 .service h4 {
@@ -704,7 +705,7 @@ a:focus {
 }
 
 .department-service li i {
-  color: #03afdf;
+  color: #005e79;
 }
 
 .doctors .btn-group .btn {
@@ -719,7 +720,7 @@ a:focus {
 .doctors .btn-group .btn.active {
   box-shadow: none !important;
   border-color: transparent;
-  background: #03afdf;
+  background: #005e79;
   color: #fff;
 }
 
@@ -731,14 +732,14 @@ a:focus {
 .doctors .btn-group .btn:focus {
   box-shadow: none !important;
   border-color: transparent;
-  background: #03afdf;
+  background: #005e79;
   color: #fff;
 }
 
 .doctors .btn-group .btn:hover {
   box-shadow: none !important;
   border-color: transparent;
-  background: #03afdf;
+  background: #005e79;
   color: #fff;
 }
 
@@ -776,11 +777,11 @@ a:focus {
 
 .doctor-info li i {
   margin-right: 20px;
-  color: #03afdf;
+  color: #005e79;
 }
 
 .read-more {
-  color: #03afdf;
+  color: #005e79;
 }
 
 /* @media (max-width: 480px) {
@@ -831,7 +832,7 @@ a:focus {
 }
 
 .text-color-primary {
-  color: #03afdf;
+  color: #005e79;
 }
 
 .cta-section {
@@ -929,7 +930,7 @@ a:focus {
 
 .testimonial-block.style-2 i {
   bottom: -20px;
-  color: #03afdf;
+  color: #005e79;
   opacity: .3;
 }
 
@@ -1025,7 +1026,7 @@ a:focus {
   font-size: 50px;
   margin-bottom: 15px;
   display: inline-block;
-  color: #03afdf;
+  color: #005e79;
 }
 
 .blog-item-content h2 {
@@ -1049,12 +1050,12 @@ a:focus {
 }
 
 .nav-links .page-numbers:hover {
-  background: #03afdf;
+  background: #005e79;
   color: #fff;
 }
 
 .nav-links .page-numbers.current {
-  background: #03afdf;
+  background: #005e79;
   color: #fff;
 }
 
@@ -1078,10 +1079,10 @@ a:focus {
 
 .quote {
   font-size: 22px;
-  color: #03afdf;
+  color: #005e79;
   padding: 40px;
   font-style: italic;
-  border-left: 5px solid #03afdf;
+  border-left: 5px solid #005e79;
   margin: 25px 0px;
 }
 
@@ -1143,7 +1144,7 @@ a:focus {
 }
 
 .post-comments .comment-author a {
-  color: #03afdf;
+  color: #005e79;
   font-size: 14px;
   text-transform: uppercase;
 }
@@ -1156,7 +1157,7 @@ a:focus {
 }
 
 .post-comments .comment-button {
-  color: #03afdf;
+  color: #005e79;
   display: inline-block;
   margin-left: 5px;
   font-size: 12px;
@@ -1168,7 +1169,7 @@ a:focus {
 }
 
 .post-comments .comment-button:hover {
-  color: #03afdf;
+  color: #005e79;
 }
 
 .post-excerpt {
@@ -1190,7 +1191,7 @@ a:focus {
 .post-excerpt blockquote.quote-post p {
   line-height: 30px;
   font-size: 20px;
-  color: #03afdf;
+  color: #005e79;
 }
 
 .comments-section {
@@ -1238,7 +1239,7 @@ a:focus {
 }
 
 .comment-wrap .media .media-heading a {
-  color: #03afdf;
+  color: #005e79;
   font-size: 13px;
 }
 
@@ -1263,7 +1264,7 @@ a:focus {
 
 .comment-reply-form input:focus, .comment-reply-form textarea:focus {
   box-shadow: none;
-  border: 1px solid #03afdf;
+  border: 1px solid #005e79;
 }
 
 .comment-reply-form textarea, .comment-reply-form .btn-main {
@@ -1288,7 +1289,7 @@ a:focus {
   bottom: 0px;
   width: 35px;
   height: 3px;
-  background: #03afdf;
+  background: #005e79;
 }
 
 .sidebar-widget.latest-post .media img {
@@ -1314,7 +1315,7 @@ a:focus {
 }
 
 .sidebar-widget.category ul li a:hover {
-  color: #03afdf;
+  color: #005e79;
   padding-left: 5px;
 }
 
@@ -1340,7 +1341,7 @@ a:focus {
 
 .sidebar-widget.tags a:hover {
   color: #fff;
-  background: #03afdf;
+  background: #005e79;
 }
 
 .sidebar-widget.schedule-widget {
@@ -1364,7 +1365,7 @@ a:focus {
 }
 
 .footer {
-  padding-bottom: 10px;
+  padding-bottom: 0px;
 }
 
 .footer .copyright a {
@@ -1381,11 +1382,11 @@ a:focus {
 }
 
 .logo h3 {
-  color: #03afdf;
+  color: #005e79;
 }
 
 .logo span {
-  color: #03afdf;
+  color: #005e79;
 }
 
 .widget .divider {
@@ -1393,7 +1394,7 @@ a:focus {
 }
 
 .widget h4 {
-  color: #03afdf;
+  color: #005e79;
 }
 
 .widget .footer-menu a {
@@ -1401,7 +1402,7 @@ a:focus {
 }
 
 .widget .footer-menu a:hover {
-  color:#03afdf;
+  color:#005e79;
 }
 
 .footer-contact-block span {
@@ -1434,7 +1435,7 @@ a:focus {
 }
 
 .widget-contact h6 i {
-  color: #03afdf;
+  color: #005e79;
 }
 
 .subscribe {
@@ -1456,7 +1457,7 @@ a:focus {
 
 .backtop {
   position: fixed;
-  background: #03afdf;
+  background: #005e79;
   z-index: 9999;
   display: inline-block;
   left: 20px;
@@ -1483,3 +1484,61 @@ a:focus {
 }
 
 /*# sourceMappingURL=maps/style.css.map */
+
+/* Styles for Our Approach to Eye Care Section */
+.approach-section {
+  padding: 50px 10%; /* Adds space on left and right */
+}
+
+.approach-card {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  overflow: hidden;
+  transition: transform 0.3s ease-in-out;
+  height: 440px;
+}
+
+.approach-card:hover {
+  transform: translateY(-5px);
+}
+
+.approach-img {
+  width: 100%;
+  height: 250px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.card-body {
+  text-align: center;
+  padding: 25px;
+}
+
+/* Styles for Quality Objectives Section */
+.quality-section {
+  padding: 50px 15%; /* Adds space on left and right */
+  text-align: center;
+}
+
+.quality-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+.quality-list ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.quality-list li {
+  font-size: 18px;
+  margin-bottom: 15px;
+  padding: 15px;
+  background: #f8f8f8;
+  border-radius: 5px;
+  width: 100%;
+  text-align: left;
+}
