--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
       </div>
       <nav class="navbar navbar-expand-lg navigation" id="navbar">
         <div class="container">
-          <a class="navbar-brand" href="/"><img src="static/images/karunyalogo.jpeg" alt="" class="img-fluid" /></a>
+          <a class="navbar-brand" href="/"><img src="static/images/karunyalogo.jpeg" style="height: 75px;" alt="" class="img-fluid" /></a>
 
           <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarmain" aria-controls="navbarmain" aria-expanded="false" aria-label="Toggle navigation"><span class="icofont-navigation-menu"></span></button>
 
@@ -68,12 +68,20 @@
               <li class="nav-item active">
                 <a class="nav-link" href="/">Home</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about">About</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="services" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About Us <i class="icofont-thin-down"></i></a>
+                <ul class="dropdown-menu" aria-labelledby="dropdown01">
+                  <li>
+                    <a class="dropdown-item" href="">About</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="">Managements</a>
+                  </li>
+                </ul>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="services" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Facilities <i class="icofont-thin-down"></i></a>
-                <ul class="dropdown-menu" aria-labelledby="dropdown01">
+                <ul class="dropdown-menu" aria-labelledby="dropdown02">
                   <li>
                     <a class="dropdown-item" href="">Insurance</a>
                   </li>
@@ -87,11 +95,8 @@
               </li>
 
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="department" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Department <i class="icofont-thin-down"></i></a>
-                <ul class="dropdown-menu" aria-labelledby="dropdown02">
-                  <li>
-                    <a class="dropdown-item" href="department">Departments</a>
-                  </li>
+                <a class="nav-link dropdown-toggle" href="department" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Specialities <i class="icofont-thin-down"></i></a>
+                <ul class="dropdown-menu" aria-labelledby="dropdown03">
                   <li>
                     <a class="dropdown-item" href="specialities">Specialities</a>
                   </li>
@@ -131,14 +136,11 @@
 
     <!-- footer Start -->
     <!-- Footer Start -->
-    <footer class="footer section white-bg">
+    <footer class="footer section bg-light">
       <div class="container">
         <div class="row">
           <div class="col-lg-4 mr-auto col-sm-6">
             <div class="widget mb-5 mb-lg-0">
-              <div class="logo mb-4">
-                <img src="static/images/karunyalogo.jpeg" alt="Eye Hospital Logo" class="img-fluid" />
-              </div>
               <p>Providing world-class eye care with advanced technology and compassionate service to restore and enhance vision.</p>
               <ul class="list-inline footer-socials mt-4">
                 <li class="list-inline-item">
@@ -228,14 +230,15 @@
           <div class="row align-items-center justify-content-between">
             <div class="col-lg-6">
               <div class="copyright">
-                &copy; Copyright Reserved to <span class="text-color">Karunya Eye Care Hospital</span>
+                &copy; Copyright Reserved to <span class="text-color">Karunya Eye Care Hospital.</span>
+                <br>Designed and Developed by <b href="https://inspirezesttechnologies.com/">InspireZest Technologies</b>
               </div>
             </div>
             <div class="col-lg-6">
               <div class="subscribe-form text-lg-right mt-5 mt-lg-0">
                 <form action="#" class="subscribe">
                   <input type="email" class="form-control" placeholder="Your Email Address" required />
-                  <button type="submit" class="btn btn-main-2 btn-round-full">Subscribe</button>
+                  <button type="submit" class="btn btn-main-2 btn-round-full">Subscribe <i class="fa-solid fa-angles-right text-white"></i></button>
                 </form>
               </div>
             </div>
