--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  About | Karunya Eyecare
+  About | Karunya Eye Hospital
 {% endblock %}
 
 {% block content %}
@@ -33,7 +33,7 @@
         <!-- Content Section: 50% Width -->
         <div class="col-lg-6 col-sm-12">
           <div class="about-content pl-4 mt-4 mt-lg-0">
-            <h2 class="title-color">About Karunya Eyecare</h2>
+            <h2 class="title-color">About Karunya Eye Hospital</h2>
             <p class="mt-4 mb-5">Established in 1985 as K.K. Opticals & Eye Clinic in Adoor, Kerala, by Mr. Tilly B George, a pioneer in optical lenses and accessories, our institution has grown remarkably over 40 years. His vision of a premier eye care center became a reality with Karunya Eye Hospital (KEH) in 2008.
 
               KEH, a NABH-certified specialty eye care hospital, is one of the most trusted in Adoor, with modern centers in Pandalam and Kottarakkara. Our eight highly qualified specialists provide advanced ophthalmic care, including cataract, retina, glaucoma, and laser eye surgeries. Thousands of painless MICS cataract surgeries (Phaco) have been successfully performed.
