--- a/templates/appoinment.html
+++ b/templates/appoinment.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Appoinment | Karunya Eyecare{% endblock %}
+{% block title %}Appoinment | Karunya Eye Hospital{% endblock %}
 
 {% block content %}
 
