--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  Gallery | Karunya Eye Care
+  Gallery | Karunya Eye Hospital
 {% endblock %}
 
 {% block content %}
@@ -12,7 +12,7 @@
         <div class="col-md-12">
           <div class="block text-center">
             <span class="text-white">Our Gallery</span>
-            <h1 class="text-capitalize mb-5 text-lg">Moments at Karunya Eye Care</h1>
+            <h1 class="text-capitalize mb-5 text-lg">Moments at Karunya Eye Hospital</h1>
           </div>
         </div>
       </div>
@@ -24,7 +24,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
           <div class="section-title">
-            <h2>Our Eye Care Journey</h2>
+            <h2>Our Eye Hospital Journey</h2>
             <div class="divider mx-auto my-4"></div>
             <p>Explore our state-of-the-art eye care facilities, advanced surgical procedures, and heartwarming patient journeys through our gallery.</p>
           </div>
