--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 
     <title>
       {% block title %}
-        Karunya Eyecare
+        Karunya Eye Hospital
       {% endblock %}
     </title>
 
@@ -39,7 +39,7 @@
             <div class="col-lg-6">
               <ul class="top-bar-info list-inline-item pl-0 mb-0">
                 <li class="list-inline-item">
-                  <a href="mailto:support@gmail.com"><i class="icofont-support-faq mr-2"></i>support@karunyaeyecare.com</a>
+                  <a href="mailto:support@gmail.com"><i class="icofont-support-faq mr-2"></i>support@karunyaeyehospital.com</a>
                 </li>
                 <li class="list-inline-item">
                   <i class="icofont-location-pin mr-2"></i>Kollam , Kerala
@@ -213,7 +213,7 @@
                   <i class="icofont-email mr-3"></i>
                   <span class="h6 mb-0">24/7 Support Available</span>
                 </div>
-                <h4 class="mt-2"><a href="mailto:support@eyehospital.com">support@karunyaeyecare.com</a></h4>
+                <h4 class="mt-2"><a href="mailto:support@eyehospital.com">support@karunyaeyehospital.com</a></h4>
               </div>
               <div class="footer-contact-block">
                 <div class="icon d-flex align-items-center">
