--- a/templates/contact.html
+++ b/templates/contact.html
@@ -102,7 +102,7 @@
                 <div class="contact-block mb-4 mb-lg-0">
                     <i class="icofont-support-faq"></i>
                     <h5>Email Support</h5>
-                     care@eyehospital.com
+                     karunya@eyehospital.com
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6 col-md-6">
