--- a/templates/department.html
+++ b/templates/department.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Department | Karunya Eyecare{% endblock %}
+{% block title %} Department | Karunya Eye Hospital{% endblock %}
 
 {% block content %}
 <section class="page-title bg-1">
