--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  Doctors | Karunya Eye Care
+  Doctors | Karunya Eye Hospital
 {% endblock %}
 
 {% block content %}
