--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  Home | Karunya Eyecare
+  Home | Karunya Eye Hospital
 {% endblock %}
 
 {% block content %}
@@ -410,7 +410,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-7">
           <div class="section-title text-center">
-            <h2>Our Trusted Eye Care Partners</h2>
+            <h2>Our Trusted Eye Hospital Partners</h2>
             <div class="divider mx-auto my-4"></div>
             <p>We collaborate with leading eye care specialists and institutions to bring the best vision care to our patients. Their expertise and commitment help us ensure the highest standards of eye health and treatment.</p>
           </div>
