--- a/templates/services.html
+++ b/templates/services.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  Services | Karunya Eyecare
+  Services | Karunya Eye Hospital
 {% endblock %}
 
 {% block content %}
