--- a/templates/specialities.html
+++ b/templates/specialities.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  Specialities | Karunya Eye Care
+  Specialities | Karunya Eye Hospital
 {% endblock %}
 
 {% block content %}
